update list users url
