# Examples/API/App-Package/cmd/api/docs/swagger.yaml
@@ -2,8 +2,7 @@ definitions:
   app.problemDetail:
     properties:
       detail:
-        description: A human-readable explanation specific to this occurrence of the
-          problem.
+        description: A human-readable explanation about the occurrence of the problem.
         type: string
       status:
         description: The HTTP status code generated by the origin server.
@@ -18,8 +17,7 @@ definitions:
   app.problemDetailValidation:
     properties:
       detail:
-        description: A human-readable explanation specific to this occurrence of the
-          problem.
+        description: A human-readable explanation about the occurrence of the problem.
         type: string
       invalidParams:
         description: A list of invalid parameters with error details.
@@ -69,6 +67,24 @@ info:
   contact: {}
 paths:
   /api/user:
+    get:
+      description: List all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/app.user'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.problemDetail'
+      summary: List Users
+      tags:
+      - user
     post:
       consumes:
       - application/json
@@ -197,25 +213,6 @@ paths:
           schema:
             $ref: '#/definitions/app.problemDetail'
       summary: Update User
-      tags:
-      - user
-  /api/users:
-    get:
-      description: List all users
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/app.user'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/app.problemDetail'
-      summary: List Users
       tags:
       - user
 swagger: "2.0"
